--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+html, body {
+    overflow: hidden;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-global-scrollblock {
+    position: fixed;
+    width: 100%;
+    overflow-y: auto;
+}
+
+@media (max-width: 720px) {
+    .hide-mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 720px) {
+    .hide-desktop {
+        display: none;
+    }
+}
